<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.butterfly.lab_01.MainActivity">

    <TextView
        android:id="@+id/tv_absolute_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/absolute"/>

    <TextView
        android:id="@+id/tv_name_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"/>

    <TextView
        android:id="@+id/tv_path_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/path"/>

    <TextView
        android:id="@+id/tv_read_write_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/read_write"/>

    <TextView
        android:id="@+id/tv_external_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/external"/>



    <Button
        android:id="@+id/btn_getFilesDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getFilesDir"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_getCacheDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getCacheDir"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_getExternalFilesDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getExternalFilesDir"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_getExternalCacheDir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getExternalCacheDir"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_getExternalStorageDirectory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getExternalStorageDirectory"
        android:onClick="onClick"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_getExternalStoragePublicDirectory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getExternalStoragePublicDirectory"
        android:onClick="onClick"
        android:textAllCaps="false"/>
</LinearLayout>
